# example-package-alishahmed

./: .gitignore  CHANGELOG.md  README.md  output.txt  pyproject.toml
tests/: test_rescale.py
