# contents of a minimal pyproject.toml 

[build-system] 
requires = ["hatchling"] 
build-backend = "hatchling.build" 

[project] 
name = "example_package_alishahmed" 
dependencies = ["numpy"]
dynamic = ["version"] 

[project.optional-dependencies]
test = ["pytest"]

#this gives a path for where to find version number
[tool.hatch]
version.path = "src/example_package_alishahmed/__init__.py"
